--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="./img/logo.png" alt="" class="brand" />
         <h1 class="title">verylargebox</h1>
       </div>
-      <div class="card-container">
+      <div class="card-container clearfix">
         <div class="location">
           <h2 class="store-name">The Caley Sample Room</h2>
           <h3 class="store-location">Edinburgh</h3>
@@ -30,11 +30,13 @@
           <img src="./img/placeholder-item.jpg" width="640" height="640" alt="Beer @ The Caley Sample Room" class="hero" />
         </div>
         <div class="time-stamp">
+          <i class="icon-clock"></i>
           <span class="date"> about 2 hours ago</span>
         </div>
       </div>
       <a href="#">
       <div class="btn">
+        <i class="icon-map-pin-fill"></i>
         Get directions
       </div>
       </a>
