--- a/index.html
+++ b/index.html
@@ -29,16 +29,22 @@
         <div class="item-img">
           <img src="./img/placeholder-item.jpg" width="640" height="640" alt="Beer @ The Caley Sample Room" class="hero" />
         </div>
+        <div id="map-canvas"></div>
         <div class="time-stamp">
           <i class="icon-clock"></i>
           <span class="date"> about 2 hours ago</span>
         </div>
       </div>
-      <a href="#">
+      <a href="#" id="show-map">
       <div class="btn">
         <i class="icon-map-pin-fill"></i>
         Get directions
       </div>
       </a>
+      
+      
+      <script src="./js/jquery-1.10.2.js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+      <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
