--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="card-container clearfix">
         <div class="location">
           <h2 class="store-name" data-store-name="The Caley Sample Room">The Caley Sample Room</h2>
-          <h3 class="store-location" data-store-city="Edinburgh" data-latlong="55.952757 -3.19.3645">Edinburgh</h3>
+          <h3 class="store-location" data-store-city="Edinburgh" data-lat="55.952757"  data-lng="-3.193645">Edinburgh</h3>
         </div>
         <div class="item-img">
           <img src="./img/placeholder-item.jpg" width="640" height="640" alt="Beer @ The Caley Sample Room" class="hero" />
