--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+        <!-- App banner -->
+        <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
         <title>verylargebox</title>
         <meta name="description" content="verylargebox - Find what's in store in the city you live in.">
         <meta name="author" content="verylargebox">
@@ -27,22 +28,19 @@
           <h3 class="store-location" data-store-city="Edinburgh" data-lat="55.952757"  data-lng="-3.193645">Edinburgh</h3>
         </div>
         <div class="item-img">
-          <img src="./img/placeholder-item.jpg" width="640" height="640" alt="Beer @ The Caley Sample Room" class="hero" />
+          <img src="./img/placeholder-item.jpg" width="640" height="640" alt="Beer @ The Caley Sample Room" id="item-image" class="hero" />
         </div>
         <div id="map-canvas"></div>
         <div class="time-stamp">
           <i class="icon-clock"></i>
           <span class="date"> about 2 hours ago</span>
         </div>
+        <a href="#" id="show-map">
+        <div class="btn">
+          <i class="icon-map-pin-fill"></i> Get directions
+        </div>
+        </a>
       </div>
-      <a href="#" id="show-map">
-      <div class="btn">
-        <i class="icon-map-pin-fill"></i>
-        Get directions
-      </div>
-      </a>
-      
-      
       <script src="./js/jquery-1.10.2.js"></script>
       <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
       <script type="text/javascript" src="./js/app.js"></script>
